Create more function implementation

--- a/fibonacci.ipynb
+++ b/fibonacci.ipynb
@@ -51,9 +51,60 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "This function uses matrix exponentiation to calculate the n-th Fibonacci number. It first defines a matrix a as the matrix |1 1| |1 0|, and a result matrix result as the same matrix. It then iterates log(n)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is important to note that there are also other function implementation that can be used that are simple and easy to understand.\n",
+    "\n",
+    "The examples below are some:\n",
+    "\n",
+    "1. using the `for_loop`\n",
+    "\n",
+    "2. Using the `while_loop`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Using the `for_loop`:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def generate_fibonacci(n):\n",
+    "    fib_list = []\n",
+    "    a, b = 0, 1\n",
+    "    for i in range(n):\n",
+    "        fib_list.append(a)\n",
+    "        a, b = b, a + b\n",
+    "    return fib_list\n",
+    "\n",
+    "n = 10\n",
+    "print(generate_fibonacci(n))"
+   ]
   }
  ],
  "metadata": {
